--- a/src/main/java/ufjf/dcc025/trabalho/view/settings.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/settings.form
@@ -40,7 +40,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f2" green="5c" red="8c" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="XBank"/>
+        <Property name="text" type="java.lang.String" value="Banco XXXXX"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
@@ -51,7 +51,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f2" green="5c" red="8c" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="XBank"/>
+        <Property name="text" type="java.lang.String" value="Banco XXXXX"/>
       </Properties>
     </Component>
   </NonVisualComponents>
